@@ -25,5 +25,6 @@
   <adapter factory=".marshaller.FTI2Surf" />
   <adapter factory=".marshaller.ATFolderish2Surf" />
   <adapter factory=".marshaller.PortalTypesUtil2Surf" /> 
+  <adapter factory=".marshaller.MimetypesRegistry2Surf" /> 
 
 </configure>
