@@ -7,6 +7,7 @@ Changelog
    [tiberich #5135]
  * Feature: use a mechanism of subscribers to allow modification of the surf
    resource by package plugins [tiberich #5129]
+ * Bug fix: fix @@rdf view for mimetypes_registry [tiberich #5206]
 
 4.6 - (2012-03-30)
 ------------------
